[gd_scene load_steps=4 format=3 uid="uid://btgeujrjauseb"]

[ext_resource type="Script" uid="uid://byism1keocxgy" path="res://settings.gd" id="1_3ykye"]
[ext_resource type="AudioStream" uid="uid://bphdndih1guy0" path="res://Menuclick.wav" id="1_nkug2"]
[ext_resource type="AudioStream" uid="uid://o3kdskrrphvb" path="res://menuhover.wav" id="2_3ykye"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ykye")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.396078, 0.396078, 0.396078, 0.529412)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -73.0
offset_right = 58.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Windowed" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Windowed"

[node name="Fullscreen" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Fullscreen
"

[node name="CheckButton" type="CheckButton" parent="GridContainer"]
layout_mode = 2
text = "Music on/off
"

[node name="Main menu" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Main menu
"

[node name="menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_nkug2")

[node name="menu_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3ykye")

[connection signal="pressed" from="GridContainer/Windowed" to="." method="_on_windowed_pressed"]
[connection signal="pressed" from="GridContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="toggled" from="GridContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="GridContainer/Main menu" to="." method="_on_main_menu_pressed"]
